# integration-hub

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: pyinstaller_entry.py
src/agsync/: __main__.py  config.py  crypto.py  server.py  service.py  settings_store.py  tls.py
src/agsync/ag/: __init__.py
src/agsync/auth/: __init__.py  session.py  store.py
src/agsync/db/: connection.py  schema.py
src/agsync/i18n/: __init__.py  translator.py
src/agsync/lib/pacs/: __init__.py  base.py  registry.py
src/agsync/lib/pacs/avigilon/: __init__.py  adapter.py  client.py
src/agsync/lib/pacs/lenel/: __init__.py  adapter.py
src/agsync/locales/: en.json  es.json
src/agsync/logs/: __init__.py  store.py
src/agsync/observability/: __init__.py  sentry.py
src/agsync/routes/: api.py  auth.py  credentials.py  logs.py  settings.py  status.py  wizard.py
src/agsync/static/: styles.css
src/agsync/sync/: __init__.py  engine.py  snapshot.py  tracking.py
src/agsync/sync/phases/: __init__.py  phase1_provision.py  phase2_local_to_ag.py  phase3_deletions.py  phase4_ag_to_local.py  phase5_retries.py  phase6_field_changes.py
src/agsync/templates/: _credentials_install.html  _logs_table.html  _status_card.html  base.html  credentials.html  login.html  logs.html  settings.html  status.html
src/agsync/templates/wizard/: step1.html  step2.html  step3.html  step4.html  step5.html
