[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agsync"
version = "0.1.0"
description = "AccessGrid sync tool — bridges PACS (Avigilon, Lenel, etc.) to AccessGrid"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "AccessGrid" }]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "jinja2==3.1.4",
    "itsdangerous==2.2.0",
    "python-multipart==0.0.12",
    "httpx==0.27.2",
    "cryptography==43.0.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "argon2-cffi==23.1.0",
    "sentry-sdk==2.14.0",
    "click==8.1.7",
    "pywin32==306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.6.8",
    "pyinstaller==6.10.0",
]

[project.scripts]
agsync = "agsync.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agsync = ["templates/**/*.html", "static/**/*", "locales/*.json"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
